--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- App name required by AndroidManifest -->
     <string name="app_name">NewsAppTask</string>
+    <string name="unknown_error">Unknown error</string>
+    <string name="empty_news">No news available</string>
+    <string name="load_more_failed">Load more failed</string>
+    <string name="full_article">Full Article</string>
+    <string name="back">Back</string>
+    <string name="no_image">No image</string>
+    <string name="save_article">Save Article</string>
+    <string name="no_internet_title">No Internet Connection</string>
+    <string name="check_your_connection">Check your internet connection and try again</string>
+    <string name="removed_from_favorites">Removed from favorites</string>
+    <string name="no_favorites_yet">No favorites yet</string>
+    <string name="read_more">Read more</string>
+    <string name="open_in_browser">Open in browser</string>
+    <string name="retry">Retry</string>
+    <string name="delete">Delete</string>
 </resources>
